# cims

./: .gitignore  CIMS_run.ipynb  CIMS_run_BG.ipynb  CITATION.cff  Carbon_Price_Scenario.zip.REMOVED.git-id  LICENSE  Model.py  Notes.md  Pipfile  README.md  TODO.md  environment.yml  living_doc.md  package-lock.json  prototype_summary.md  pyCIMS_model_description.xlsm  pyCIMS_model_description2.xlsm  pyCIMS_model_description_190826.xlsm  pyCIMS_model_description_20200221.xlsm  pyCIMS_model_description_20200527_noServices.xlsm  pyCIMS_model_description_Alberta_Validated-July_31.xlsb  pyCIMS_model_description_Alberta_Validated.xlsb  pyCIMS_model_description_CarbonCost.xlsb.REMOVED.git-id  pyCIMS_run.ipynb  pyproject.toml  run_model.ipynb  setup.py  simplest_data.xlsm  ~$pyCIMS_model_description.xlsm
.github/: pull_request_template.md
CIMS/: ModelValidator.py  __init__.py  about.py  cost_curves.py  declining_costs.py  download.py  emissions.py  graph_utils.py  lcc_calculation.py  logging.py  loop_resolution.py  model.py  node_utils.py  old_utils.py  quantities.py  quantity_aggregation.py  reader.py  revenue_recycling.py  tax_foresight.py  utils.py  vintage_weighting.py  visualize.py
benchmark/: prices.csv
code/: simplest_model.py  supply_demand_new.ipynb  supply_demand_new.ipynb.REMOVED.git-id
docs/: GettingStarted.md  INSTALL.md  Installation.md  UpdatingCIMS.md  UpdatingPyCIMS.md  WorkingWithCondaEnvironment.md
environment/: package-lock.json
info/: living_doc.md  meetings.md  pyCIMS_demand-supply_equilibrium_process.docx  supply_demand_summary.md
(+152 files in other folders)
